--- a/app/src/main/res/layout/confirm_send_sheet.xml
+++ b/app/src/main/res/layout/confirm_send_sheet.xml
@@ -239,7 +239,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/send_dcr_warning"
+                android:text="@string/send_btc_warning"
                 android:textSize="@dimen/edit_text_size_14"
                 android:textColor="@color/darkBlueTextColor"
                 android:layout_marginStart="@dimen/margin_padding_size_8"
