--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -113,6 +113,7 @@
                 android:id="@+id/ll_restore_wallet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:background="@drawable/transparent_ripple_corner_8dp"
                 android:padding="@dimen/margin_padding_size_16"
                 android:layout_marginTop="@dimen/margin_padding_size_16"
