--- a/app/src/main/res/layout/activity_tabs.xml
+++ b/app/src/main/res/layout/activity_tabs.xml
@@ -42,7 +42,7 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:id="@+id/home_logo"
-                    app:srcCompat="@drawable/ic_decred_blue" />
+                    app:srcCompat="@drawable/bitcoin_symbol" />
 
                 <TextView
                     android:layout_width="wrap_content"
