--- a/app/src/main/res/layout/fragment_accounts.xml
+++ b/app/src/main/res/layout/fragment_accounts.xml
@@ -12,6 +12,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_padding_size_4"
+        android:layout_marginBottom="@dimen/margin_padding_size_4"
+        android:layout_marginStart="@dimen/margin_padding_size_8"
+        android:layout_marginEnd="@dimen/margin_padding_size_8"
+        android:background="@drawable/card_bg"
+        android:elevation="4dp"
         android:id="@+id/wallets_list_rv"
         />
 
