--- a/app/src/main/res/layout/account_custom_spinner.xml
+++ b/app/src/main/res/layout/account_custom_spinner.xml
@@ -39,6 +39,7 @@
 
         <TextView
             android:id="@+id/spinner_wallet_name"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/colorBackground"
