--- a/app/src/main/res/layout/single_wallet_sync_details.xml
+++ b/app/src/main/res/layout/single_wallet_sync_details.xml
@@ -23,17 +23,17 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_block_header_fetched"
+            android:id="@+id/tv_cfilters_fetched"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/block_header_fetched"
+            android:text="@string/cfilters_fetched"
             android:textColor="#596d81"
             android:textSize="14sp"
             app:fontFamily="@font/source_sans_pro" />
 
         <TextView
-            android:id="@+id/tv_fetch_discover_scan_count"
+            android:id="@+id/tv_fetch_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#091440"
